--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.2.0'
     implementation 'androidx.navigation:navigation-fragment:2.7.4'
     implementation 'androidx.navigation:navigation-ui:2.7.4'
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -59,6 +60,7 @@ dependencies {
     implementation("me.relex:circleindicator:2.1.6")
     implementation("de.hdodenhof:circleimageview:2.1.0")
     implementation ("com.squareup.picasso:picasso:2.71828")
+    implementation ("com.karumi:dexter:6.2.3")
 
 
 
