--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingLeanbackLauncher">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
     <uses-feature
         android:name="android.hardware.touchscreen"
@@ -10,6 +19,7 @@
     <uses-feature
         android:name="android.software.leanback"
         android:required="true" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,6 +30,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_ban_sach"
         tools:targetApi="31">
+        <activity
+            android:name=".Admin.ChinhSuaSachActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.SachAdminActivity"
+            android:exported="false" />
         <activity
             android:name=".Admin.ThemSachActivity"
             android:exported="false" />
